# hakyll-ftzm-blog

./: .dir-locals.el  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  about.org  articles.html  blog-kube.yaml  blog.html  default.nix  ftzm-blog.cabal  home.org  nginx.conf  resume_sketch.org  service.dhall  shell.nix  site.hs  stack.yaml  watch.sh
css/: mystyles.scss
k8s/: #mkIstioService#  #mkIstioVirtualService#  #simpleDeployment#  deployment.dhall~  mkIstioService~  mkIstioVirtualService.dhall~  mkIstioVirtualService~  mkService.dhall~  service.dhall  service.dhall~  simpleDeployment~
posts/: better-access-to-relationship-objects-in-sqlalchemy.md  cluster.org  custom-workspace-info-with-i3-sockets-and-python.md  fixing-a-botched-system-update-with-chroot.md  getting-output-from-a-backgrounded-python-script.md  org-test.org  tricks-with-tags-in-hakyll.org  workspaces-only-need-names-when-you-can-see-them.md
scripts/: commit_release.sh  git_release.sh
src/: about.org  articles.html  projects.org  resume.org  shell.nix
src/css/: github.css  github.css~  (+4 more)
templates/: basic.html  default.html  head.html  home.html  post-list.html  post.html  tag.html
unprocessed/: 10-linux-top-processes-script.md  11-workspaces-only-need-names-when-you-can-see-them.md  12-build-your-own-ide-with-vim-tmux-and-vimux.md  3-syntax-highlighting-with-markdown-in-python.md  4-syncing-dotfiles-with-git.md  6-fixing-a-botched-system-update-with-chroot.md  7-better-access-to-relationship-objects-in-sqlalchemy.md  8-custom-workspace-info-with-i3-sockets-and-python.md  (+1 more)
(+11 files in other folders)
