name:                ftzm-blog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ftzm-blog#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable ftzm-blog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       blaze-html,
                       containers,
                       unordered-containers,
                       yaml,
                       text,
                       vector,
                       split,
                       pandoc
